xgds_video/static/xgds_video/css/xgds_video.css
/* css for xgds_video */
.player_container {
	height: 100%;
	width: 100%;
}

.hint {
	font-style: italic;
	font-size: .8em;
}

.player {
	height: 100%;
	width: 100%;
	min-height: 200px;
}

.locomote-player {
        height: 100%;
      }
ui-wrapper {
	padding-bottom: 0px !important;
}

body {
	color: black;
}

object {
	height: 100%;
}


controller_div div {
	display:inline-block;
}

#sliderGroup {
    width: 90%;
    padding:8px;
    background:#CACACA;
    margin-bottom:5px;
    border-width:2px;
    border-style:solid;
}

#sliderLegendGroup {
    background:#FFFFFF;
}

#sliderTimeLabel {
    color:#f6931f; 
    font-weight:bold;
}

#vcrControls {
	display: table-cell;
}

#masterSlider {
	margin-left: 35px;
	float: left;
    width: 95%;
    height: 8px;
    margin-top:12px;
    margin-bottom:5px;
    margin-right:15px;
}

.masterSlider .ui-slider {
    border-radius: 2px;
}
.masterSlider .ui-slider-handle {
    border-radius: 4px;
    width: 0.4em;
    margin-left: -0.2em;
    background: black;
    color: black;
    border-color: black;
}

div.ui-slider-range.ui-widget-header {
    background: #505050;
}

#legend {
    float: left;
    position: absolute;
    clear:both;
    font-size:10px;
}

.legend-segment {
	max-height: 4px;
	height: 4px;
}

#topStuff {
	display: table;
	width: 100%;
}

#infoTable {
	display: table-cell;
}

#seekTimeBox {
	float: right;
	padding-right: 20px;
	display: table-cell;
    font-size: 1rem;
    font-weight: 600;
}

#seekTime {
	margin-left: 5px;
	margin-right: 5px;
}

.float-left {
	float:left;
}

.toprow-left{
    float:left;
}

.toprow-right{
    float:right;
}

.buttons{
    display:block;
}

.stylish {
    font-family: FontAwesome;
}

.item { width: 100%; 
		padding-left:10px;
    	padding-right:10px;
    	padding-top:5px;
    	background:#CACACA; 
    	padding-bottom:20px; 
    	margin-bottom:20px; 
    	border-width:2px; 
    	box-shadow: 0 2px 5px rgba(0,0,0,0.5);
    	}
.item.w2 { width: 49%; 
    	}

.imageStream {
	border-width:1.5px;
	box-shadow: 0 1px 3px rgba(0,0,0,0.5);
}

.divider {
    clear: both;
    padding: 0px;
    margin-bottom: -3px;
}

.divider hr {
}

.hr {
    float: left;
    height: 4px;
}

#volume {
    float: right;
}

.tooltip { 
    font-size: 17px;
    width: 100px;
    color: black;
    float: right;
    background-color: rgba(184,184,184,0.5);
}

#page-footer {
	position: relative;
}

#page-content {
	height: 1100px;
}

.notelabel {
	width: 40px;
	vertical-align: text-top;
}

.noteinput input textarea{
	min-height:20px;
	min-width: 400px;
	padding-bottom: 0px;
	width: 90%;
}

.notediv {
	/*clear:left; */
	padding-top:2px; 
}

.noteerrordiv {
	float:left; 
	height:15px;
	padding-bottom:2px;
	color: black;
	font-weight: bold;
}

blocky div label input{
	display: inline-block !important;
}

.notecontainer {
	display: flex;
	align-content: stretch;
	flex-wrap: wrap;
	flex-flow: row wrap;
	width: 100%;
}

.noteitem {
	flex-basis: auto;
}

.noteitem.stretch {
	align-self: stretch;
}

/*__BEGIN_LICENSE__
/* Copyright (c) 2015, United States Government, as represented by the
/* Administrator of the National Aeronautics and Space Administration.
/* All rights reserved.
/*
/* The xGDS platform is licensed under the Apache License, Version 2.0
/* (the "License"); you may not use this file except in compliance with the License.
/* You may obtain a copy of the License at
/* http://www.apache.org/licenses/LICENSE-2.0.
/*
/* Unless required by applicable law or agreed to in writing, software distributed
/* under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
/* CONDITIONS OF ANY KIND, either express or implied. See the License for the
/* specific language governing permissions and limitations under the License.
/*__END_LICENSE__

